# apc-smartconnect-py

./: .gitignore  README.md  pyproject.toml  sample.py  sample_cookies.py
.github/workflows/: python-publish.yml  test.yml
apc_smartconnect/: APCSmartConnect.py  __init__.py
tests/: test_apc.py
