[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apc-smartconnect"
description = "A Python class to get info from APC SmartConnect"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/datagutten/apc-smartconnect-py"
